# gsnoop

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: test.yml
gsnoop/: causal.py  screening.py
src/: test.py
src/gsnoop/: causal.py  screening.py  util.py
