[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsnoop"
version = "0.1"
description = "Group-based feature selection."
authors = [
  {name = "Stefan Muehlbauer", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "scikit-learn >= 1.4.2",
  "pysat >= 3.2.0",
  "python-sat >= 1.8.dev12",
  "scipy >= 1.13.0",
  "numpy >= 1.26.4",
  "pandas >= 2.2.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gsnoop"]

[tool.setuptools.package-data]
snoop = ["data/*.txt"]
