[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsnoop"
version = "0.1.3"
description = "Group-based feature selection."
authors = [
  {name = "Stefan Mühlbauer", email = "s.muehlbauer@mars.ucc.ie"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "scikit-learn",
  "numpy",
  "pulp",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gsnoop"]

[tool.setuptools.package-data]
snoop = ["data/*.txt"]
